contact.html about.html cart.html index.html order.css order.html service.html styles.css

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             lifestyles, and they are easy to care for.
           </p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <a href="./shop.html">
+            <a href="./order.html">
             <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">
               SHOP NOW
             </button>
