--- a/service.html
+++ b/service.html
@@ -4,40 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>service</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <style>
       body {
-        background-color: rgb(196, 166, 129);
+        background-color: rgb(196, 107, 98);
         color: #000000;
         line-height: 40px;
         font-weight: 600;
       }
       .btn-primary:hover {
-        background-color: #008cba;
-        color: white;
+        background-color: antiquewhite;
+      }
+      .btn-primary {
+        background-color: #473333;
+      }
+      .lead-mb-4 {
+        font-weight: 600;
       }
     </style>
   </head>
   <body>
-    <h1>Our Services;</h1>
-    <ul>
-      <li>We run a 12hours in a day, and 5days in a week service.</li>
-      <li>We sell new and trending accesories for cat pet.</li>
-      <li>
-        Our customer service is great,and you can always speak to one on
-        phonecall.
-      </li>
-      <li>
-        We have vaccines in store to be given to the cats after purchasing.
-      </li>
-      <li>We have manuals for our customers on how to care for their cats.</li>
-      <li>We are always ready to answer any question about your cats.</li>
-      <li>
-        We make sure to reach out to our customers ahead of their next vaccine
-        date.
-      </li>
-    </ul>
+    <div class="px-4 py-5 my-5 text-center">
+      <h1 class="display-5 fw-bold text-body-emphasis">Our Services</h1>
+      <div class="col-lg-6 mx-auto">
+        <p class="lead-mb-4">
+          We run a 12hours in a day, and 5days in a week service. We sell new
+          and trending accesories for cat pet. Our customer service is great,and
+          you can always speak to one on phonecall. We have vaccines in store to
+          be given to the cats after purchasing. We have manuals for our
+          customers on how to care for their cats. We are always ready to answer
+          any question about your cats. We make sure to reach out to our
+          customers ahead of their next vaccine date.
+        </p>
+      </div>
+    </div>
     <button class="btn-primary">
       <a href="./index.html">Go back</a>
     </button>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
